--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="http://bestgamewallpapers.com/files/arma-2/this-is-fun.jpg"> alt="" /></a>
 							<header>
 								<h3><a href="#">Ultrices urna sit lobortis</a></h3>
 							</header>
